--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ Podfile.lock
 Pods/
 
 xcuserdata/
-
+example/ios/Runner.xcodeproj/xcuserdata/
 # iOS
 
 # Xcode
@@ -47,7 +47,7 @@ xcuserdata/
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+example/ios/Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
