--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: jpush
 description: A new flutter plugin project.
 version: 0.0.1
-author:
-homepage:
+author: huminios <380108184@qq.com>
+homepage: https://www.jiguang.cn
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
