--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -26,27 +26,49 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 27
-
     lintOptions {
         disable 'InvalidPackage'
     }
-
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.jiguang.jpushexample"
+
+//        applicationId "com.jiguang.jpushexample"
+
+        applicationId "com.example.huminios.jpushtest" //JPush 上注册的包名.
+
         minSdkVersion 16
         targetSdkVersion 27
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
 
+
+
+        ndk {
+            //选择要添加的对应 cpu 类型的 .so 库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'x86', 'x86_64', 'mips', 'mips64'// 'arm64-v8a',
+            // 还可以添加
+        }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : applicationId,
+                JPUSH_APPKEY : "a1703c14b186a68a66ef86c1", //JPush 上注册的包名对应的 Appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+        ]
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
+    }
+    buildToolsVersion '27.0.3'
+
+    packagingOptions {
+        exclude 'lib/arm64-v8a/libgojni.so'
+        exclude 'lib/x86/libgojni.so'
+        exclude 'lib/x86_64/libgojni.so'
     }
 }
 
