adjust plugin name

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,7 +24,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  jpush:
+  jpush_flutter:
     path: ../
 
 # For information on the generic Dart part of this file, see the
