--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: jpush
-description: A new flutter plugin project.
+name: jpush_flutter
+description: Offically supported JPush Flutter plugin.
 version: 0.0.1
 author: huminios <380108184@qq.com>
 homepage: https://www.jiguang.cn
