--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: jpush_flutter
 description: Offically supported JPush Flutter plugin.
 version: 0.0.1
-author: huminios <380108184@qq.com>
+author: huminios <h380108184@gmail.com>
 homepage: https://www.jiguang.cn
 
 environment:
