--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  test: ^1.3.0
+  mockito: ^3.0.0
   flutter_test:
     sdk: flutter
 
