--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: jpush_flutter
 description: Offically supported JPush Flutter plugin.
-version: 0.0.3
+version: 0.0.5
 author: huminios <h380108184@gmail.com>
 homepage: https://www.jiguang.cn
 
@@ -8,9 +8,13 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
+  platform: ^2.0.0
   flutter:
     sdk: flutter
 
+dev_dependencies:
+  test: ^1.3.0
+  mockito: ^3.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
