--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -13,8 +13,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Wed Sep 19 16:44:40 CST 2018
-systemProp.http.proxyHost=127.0.0.1
-systemProp.https.proxyPort=1086
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=1086
 org.gradle.jvmargs=-Xmx1536M
-systemProp.https.proxyHost=127.0.0.1
-systemProp.http.proxyPort=1086
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=1086
