--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jpush_flutter
-description: Offically supported JPush Flutter plugin.
+description: JIGUANG officially supported JPush Flutter plugin (Android & iOS). 极光推送官方支持的 Flutter 插件（Android & iOS）(https://www.jiguang.cn)。
 version: 0.5.0
 author: xudong.rao <xudong.rao@outlook.com>
 homepage: https://www.jiguang.cn
