--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ homepage: https://www.jiguang.cn
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  flutter: ">=1.10.0"
 
 dependencies:
   platform: ^2.0.0
@@ -21,8 +22,11 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   plugin:
-    androidPackage: com.jiguang.jpush
-    pluginClass: JPushPlugin
+    android:
+      package: com.jiguang.jverify
+      pluginClass: JPushPlugin
+    ios:
+      pluginClass: JPushPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
