--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: jpush_flutter
 description: JIGUANG officially supported JPush Flutter plugin (Android & iOS). 极光推送官方支持的 Flutter 插件（Android & iOS）(https://www.jiguang.cn).
-version: 0.5.7
+version: 0.5.8
 # author: xudong.rao <xudong.rao@outlook.com>
 homepage: https://www.jiguang.cn
 
@@ -23,7 +23,7 @@ dev_dependencies:
 flutter:
   plugin:
     android:
-      package: com.jiguang.jverify
+      package: com.jiguang.jpush
       pluginClass: JPushPlugin
     ios:
       pluginClass: JPushPlugin
