--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: jpush_flutter
 description: JIGUANG officially supported JPush Flutter plugin (Android & iOS). 极光推送官方支持的 Flutter 插件（Android & iOS）(https://www.jiguang.cn).
-version: 0.5.8
+version: 0.5.9
 # author: xudong.rao <xudong.rao@outlook.com>
 homepage: https://www.jiguang.cn
 
@@ -22,11 +22,12 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   plugin:
-    android:
-      package: com.jiguang.jpush
-      pluginClass: JPushPlugin
-    ios:
-      pluginClass: JPushPlugin
+    platforms:
+      android:
+        package: com.jiguang.jpush
+        pluginClass: JPushPlugin
+      ios:
+        pluginClass: JPushPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
