:sparkles: 增加 proguard 混淆默认规则

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,7 +27,9 @@ android {
     defaultConfig {
         minSdkVersion 17
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles 'consumer-rules.pro'
     }
+
     lintOptions {
         disable 'InvalidPackage'
     }
