--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ version: 0.6.3
 homepage: https://www.jiguang.cn
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
   flutter: ">=1.10.0"
 
 dependencies:
