--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     implementation 'cn.jiguang.sdk:jpush:3.9.0'
     implementation 'cn.jiguang.sdk:jcore:2.6.0'
 //    implementation 'com.android.support:appcompat-v7:28.+'
-    compileOnly files('libs/flutter.jar')
+//    compileOnly files('libs/flutter.jar')
 
 }
