移除无用文件

--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,7 @@ fastlane/readme.md
 
 .dart_tool/
 .packages
+**/*/.last_build_id
+**/*/flutter_export_environment.sh
+**/*/.flutter-plugins-dependencies
+**/*/pubspec.lock
