--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
@@ -14,6 +15,7 @@ buildscript {
 
 rootProject.allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
@@ -35,6 +37,6 @@ android {
 
 dependencies {
     implementation 'cn.jiguang.sdk:jpush:4.0.6'
-    implementation 'cn.jiguang.sdk:jcore:2.6.0'
+    implementation 'cn.jiguang.sdk:jcore:2.7.8'
 
 }
