--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,17 +3,19 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
 rootProject.allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
@@ -34,8 +36,8 @@ android {
 }
 
 dependencies {
-    implementation 'cn.jiguang.sdk:jpush:3.9.0'
-    implementation 'cn.jiguang.sdk:jcore:2.6.0'
+    implementation 'cn.jiguang.sdk:jpush:4.0.9'
+    implementation 'cn.jiguang.sdk:jcore:2.8.2'
 //    implementation 'com.android.support:appcompat-v7:28.+'
     compileOnly files('libs/flutter.jar')
 
