--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
     implementation 'cn.jiguang.sdk:jpush:4.4.0'
-    implementation 'cn.jiguang.sdk:jcore:3.0.0'
+    implementation 'cn.jiguang.sdk:jcore:3.0.0-release'
 //    implementation 'com.android.support:appcompat-v7:28.+'
     compileOnly files('libs/flutter.jar')
 
