--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,11 +23,10 @@ dependencies:
 dev_dependencies:
   test: ^1.3.0
   mockito: ^3.0.0
-  jmessage_flutter: 2.0.7
   flutter_test:
     sdk: flutter
 
-  jpush_flutter: 
+  jpush_google_flutter:
     path: ../
 
 # For information on the generic Dart part of this file, see the
