--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -29,7 +29,7 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     lintOptions {
         disable 'InvalidPackage'
     }
@@ -37,11 +37,10 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
 
 //        applicationId "com.jiguang.jpushexample"
+        applicationId "com.HuananThirdPush.cn"
 
-        applicationId "com.shikk.testJpush" //JPush 上注册的包名.
-
-        minSdkVersion 17
-        targetSdkVersion 31
+        minSdkVersion 19
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -56,7 +55,7 @@ android {
 
         manifestPlaceholders = [
                 JPUSH_PKGNAME : applicationId,
-                JPUSH_APPKEY : "31c7c1b2cf59c1d42895a782", //JPush 上注册的包名对应的 Appkey.
+                JPUSH_APPKEY : "eb67142502ec9f5556875b9a", //JPush 上注册的包名对应的 Appkey.
                 JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
         ]
     }
