--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,7 @@ description: Demonstrates how to use the jpush plugin.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -18,11 +18,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+#  cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  test: ^1.3.0
-  mockito: ^3.0.0
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
