--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,17 +5,18 @@ version: 2.5.0
 homepage: https://www.jiguang.cn
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: '>=3.1.3 <4.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
-  platform: ^3.0.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  test: ^1.17.4
-  mockito: ^5.0.7
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^2.0.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
